# fastapi-openAI-SDK-nextjs-docker

./: README.md  docker-compose.yml  package-lock.json
backend/: .gitignore  Dockerfile.dev  app.py  env_example  pyproject.toml  requirements.txt
backend/src/open_sdk/: __init__.py  agents.py  config.py  tools.py
frontend/: Dockerfile.dev  next.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/: chatService.ts
frontend/src/app/components/: Chat.tsx
